Configured the JVM to be aware of Docker's memory limits.